--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000F5;
-	background-color: #E7D994;
+	color: #000001;
+	background-color: #2E3C39;
 }
 
 #muse_css_mq
@@ -24,6 +24,7 @@
 
 #page_position_content
 {
+	margin-bottom: -6px;
 	width: 0.01px;/* should not cover content below */
 }
 
@@ -222,70 +223,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
-{
-	width: 168px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 510px;
-}
-
-#u3177
-{
-	width: 168px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3177:hover
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3178-4
-{
-	width: 168px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3177:active #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u3197
 {
 	width: 168px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 680px;
+	left: 510px;
 }
 
 #u3198
@@ -295,7 +239,7 @@
 	position: relative;
 }
 
-#u3177.MuseMenuActive,#u3198:hover
+#u3156.MuseMenuActive,#u3198:hover
 {
 	width: 168px;
 	min-height: 0px;
@@ -303,13 +247,6 @@
 }
 
 #u3198:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198.MuseMenuActive
 {
 	width: 168px;
 	min-height: 0px;
@@ -325,7 +262,7 @@
 	top: 8px;
 }
 
-#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
+#u3156.MuseMenuActive #u3158-4,#u3198:hover #u3200-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -343,7 +280,71 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3198.MuseMenuActive #u3200-4
+#u3176
+{
+	width: 168px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 680px;
+}
+
+#u3177
+{
+	width: 168px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u3198.MuseMenuActive,#u3177:hover
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177.MuseMenuActive
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 168px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u3198.MuseMenuActive #u3200-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177:active #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177.MuseMenuActive #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -400,7 +401,7 @@
 
 #slideshowu3521
 {
-	z-index: 57;
+	z-index: 59;
 	width: 0.01px;
 	height: 472px;
 	position: relative;
@@ -419,12 +420,12 @@
 
 #u3522popup
 {
-	z-index: 58;
+	z-index: 60;
 }
 
 #u3700
 {
-	z-index: 59;
+	z-index: 61;
 	width: 782px;
 	height: 472px;
 	border-width: 0px;
@@ -442,7 +443,7 @@
 
 #u4204
 {
-	z-index: 61;
+	z-index: 63;
 	width: 782px;
 	height: 472px;
 	border-width: 0px;
@@ -470,12 +471,12 @@
 
 #u410-12
 {
-	z-index: 63;
+	z-index: 65;
 	width: 329px;
 	min-height: 229px;
 	background-color: transparent;
-	color: #0092C4;
 	line-height: 46px;
+	color: #0092C4;
 	text-align: center;
 	font-size: 38px;
 	font-family: bitter, serif;
@@ -495,34 +496,34 @@
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 22px;
+	padding-bottom: 28px;
 	margin-top: 73px;
 	position: relative;
 }
 
-#u3252-4
+#u3252-6
 {
 	z-index: 52;
-	width: 408px;
+	width: 622px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 267px;
+	left: 160px;
 }
 
-#u3252-4:hover
+#u3252-6:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 19px;
-	width: 408px;
+	width: 622px;
 	margin: 30px -10000px 0px 0px;
 }
 
 #u4305
 {
-	z-index: 56;
+	z-index: 58;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
