--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #000005;
-	background-color: #4D3838;
+	color: #000001;
+	background-color: #23595A;
 }
 
 #muse_css_mq
@@ -20,6 +20,12 @@
 	background-color: #333333;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#page_position_content
+{
+	margin-bottom: -6px;
+	width: 0.01px;/* should not cover content below */
 }
 
 #u3090
@@ -217,70 +223,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
-{
-	width: 168px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 510px;
-}
-
-#u3177
-{
-	width: 168px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3177:hover
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3178-4
-{
-	width: 168px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3177:active #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u3197
 {
 	width: 168px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 680px;
+	left: 510px;
 }
 
 #u3198
@@ -290,7 +239,7 @@
 	position: relative;
 }
 
-#u3177.MuseMenuActive,#u3198:hover
+#u3156.MuseMenuActive,#u3198:hover
 {
 	width: 168px;
 	min-height: 0px;
@@ -298,13 +247,6 @@
 }
 
 #u3198:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198.MuseMenuActive
 {
 	width: 168px;
 	min-height: 0px;
@@ -320,7 +262,7 @@
 	top: 8px;
 }
 
-#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
+#u3156.MuseMenuActive #u3158-4,#u3198:hover #u3200-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -338,7 +280,71 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3198.MuseMenuActive #u3200-4
+#u3176
+{
+	width: 168px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 680px;
+}
+
+#u3177
+{
+	width: 168px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u3198.MuseMenuActive,#u3177:hover
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177.MuseMenuActive
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 168px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u3198.MuseMenuActive #u3200-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177:active #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177.MuseMenuActive #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -361,19 +367,19 @@
 	margin-left: 130px;
 }
 
-#page_position_content,#pu1251-4
+#pu1251-4
 {
-	width: 0.01px;/* should not cover content below */
+	width: 0.01px;
 }
 
 #u1251-4
 {
-	z-index: 94;
+	z-index: 96;
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
-	color: #0092C4;
 	line-height: 36px;
+	color: #0092C4;
 	text-align: center;
 	font-size: 30px;
 	font-family: bitter, serif;
@@ -385,7 +391,7 @@
 
 #u1252
 {
-	z-index: 98;
+	z-index: 100;
 	width: 782px;
 	height: 16px;
 	border-style: solid;
@@ -400,7 +406,7 @@
 
 #u1250-37
 {
-	z-index: 57;
+	z-index: 59;
 	width: 782px;
 	min-height: 834px;
 	background-color: transparent;
@@ -482,33 +488,33 @@
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 22px;
+	padding-bottom: 28px;
 	position: relative;
 }
 
-#u3252-4
+#u3252-6
 {
 	z-index: 52;
-	width: 408px;
+	width: 622px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 267px;
+	left: 160px;
 }
 
-#u3252-4:hover
+#u3252-6:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 19px;
-	width: 408px;
+	width: 622px;
 	margin: 30px -10000px 0px 0px;
 }
 
 #u4305
 {
-	z-index: 56;
+	z-index: 58;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
