--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #0000E1;
-	background-color: #BC7A04;
+	color: #000000;
+	background-color: #6BCEDE;
 }
 
 #muse_css_mq
@@ -13,17 +13,19 @@
 {
 	z-index: 1;
 	width: 942px;
-	min-height: 761px;
+	min-height: 760.9499999999998px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: #333333;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #page_position_content
 {
+	margin-bottom: -6px;
 	width: 0.01px;/* should not cover content below */
 }
 
@@ -222,70 +224,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
-{
-	width: 168px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 510px;
-}
-
-#u3177
-{
-	width: 168px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3177:hover
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3178-4
-{
-	width: 168px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3177:active #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
 #u3197
 {
 	width: 168px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 680px;
+	left: 510px;
 }
 
 #u3198
@@ -295,7 +240,7 @@
 	position: relative;
 }
 
-#u3177.MuseMenuActive,#u3198:hover
+#u3156.MuseMenuActive,#u3198:hover
 {
 	width: 168px;
 	min-height: 0px;
@@ -303,13 +248,6 @@
 }
 
 #u3198:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198.MuseMenuActive
 {
 	width: 168px;
 	min-height: 0px;
@@ -325,7 +263,7 @@
 	top: 8px;
 }
 
-#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
+#u3156.MuseMenuActive #u3158-4,#u3198:hover #u3200-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -343,7 +281,71 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3198.MuseMenuActive #u3200-4
+#u3176
+{
+	width: 168px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 680px;
+}
+
+#u3177
+{
+	width: 168px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u3198.MuseMenuActive,#u3177:hover
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177.MuseMenuActive
+{
+	width: 168px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 168px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u3198.MuseMenuActive #u3200-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177:active #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 168px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3177.MuseMenuActive #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -398,9 +400,9 @@
 	left: 946px;
 }
 
-#u1253-33
+#u1253-39
 {
-	z-index: 57;
+	z-index: 59;
 	width: 782px;
 	min-height: 539px;
 	background-color: transparent;
@@ -428,52 +430,37 @@
 	color: #FFFFFF;
 }
 
-#u1253-8
-{
-	font-size: 20px;
-	text-align: center;
-	line-height: 24px;
-	color: #0093C4;
-}
-
-#u1253-12
+#u1253-10
 {
 	font-size: 25px;
 	line-height: 30px;
 	color: #0093C4;
 }
 
-#u1253-13,#u1253-14
+#u1253-11
 {
 	font-size: 14px;
 	color: #534741;
 }
 
-#u1253-19
+#u1253-20
 {
 	color: #FFFFFF;
 	font-weight: 700;
 }
 
-#u1253-20,#u1253-23
+#u1253-21,#u1253-24
 {
 	color: #9E9E9E;
 }
 
-#u1253-25
-{
-	font-size: 16px;
-	line-height: 19px;
-	color: #0093C4;
-}
-
-#u1253-17,#u1253-21,#u1253-24,#u1253-26,#u1253-27
+#u1253-18,#u1253-22,#u1253-25,#u1253-26,#u1253-27
 {
 	font-size: 16px;
 	line-height: 19px;
 }
 
-#u1253-11,#u1253-16,#u1253-29,#u1253-30
+#u1253-7,#u1253-9,#u1253-13,#u1253-14,#u1253-15,#u1253-17,#u1253-29,#u1253-30,#u1253-32,#u1253-33,#u1253-35,#u1253-36
 {
 	font-size: 25px;
 	text-align: left;
@@ -481,46 +468,223 @@
 	color: #0093C4;
 }
 
-#u1253-7,#u1253-9,#u1253-31
+#u1253-37
 {
 	font-size: 20px;
 	text-align: left;
 	line-height: 24px;
 	color: #0093C4;
+}
+
+#slideshowu4628
+{
+	z-index: 98;
+	width: 0.01px;
+	height: 284px;
+	margin-left: 96px;
+	margin-top: 148px;
+	position: relative;
+}
+
+#u4651
+{
+	position: absolute;
+	width: 1184px;
+	height: 799px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #191919;
+	background-color: rgba(0,0,0,0.9);
+	top: -161px;
+	left: -22px;
+	-pie-background: rgba(0,0,0,0.9);
+}
+
+#u4651popup
+{
+	z-index: 99;
+}
+
+#u4652
+{
+	z-index: 100;
+	width: 1140px;
+	height: 755px;
+	background-color: transparent;
+	margin-right: -10000px;
+	position: relative;
+	top: 22px;
+	left: 22px;
+}
+
+#u4652_img
+{
+	padding-left: 303px;
+	padding-right: 303px;
+}
+
+#u4631
+{
+	position: absolute;
+	width: 750px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	padding-bottom: 29px;
+}
+
+#u4631popup
+{
+	z-index: 102;
+}
+
+#u4638
+{
+	z-index: 103;
+	width: 177px;
+	height: 251px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 286px;
+}
+
+#u4638:hover
+{
+	width: 177px;
+	height: 251px;
+	min-height: 0px;
+	margin: 4px -10000px 0px 0px;
+}
+
+#u4650-4
+{
+	position: absolute;
+	width: 30px;
+	min-height: 30px;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	top: 170px;
+	left: -45px;
+}
+
+#u4650-4popup
+{
+	z-index: 105;
+}
+
+#u4663-4
+{
+	position: absolute;
+	width: 30px;
+	min-height: 30px;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	top: 170px;
+	left: 1160px;
+}
+
+#u4663-4popup
+{
+	z-index: 109;
+}
+
+#u4642
+{
+	position: absolute;
+	width: 30px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #C4C4C4;
+	padding-bottom: 5px;
+	top: -139px;
+	left: 1155px;
+}
+
+#u4642:hover
+{
+	background-color: #999999;
+	width: 30px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u4642:active
+{
+	background-color: #6B6B6B;
+	width: 30px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u4643-4
+{
+	z-index: 114;
+	width: 20px;
+	min-height: 20px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 5px;
+	left: 5px;
+}
+
+.SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* slideshowFreeStyle */
+{
+	cursor: pointer;
+}
+
+.SSSlideLoading /* slideshowFreeStyle */
+{
+	background: url("../images/loading.gif") no-repeat center center;
 }
 
 #u3093
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 22px;
-	margin-top: 24px;
+	padding-bottom: 28px;
 	position: relative;
 }
 
-#u3252-4
+#u3252-6
 {
 	z-index: 52;
-	width: 408px;
+	width: 622px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 267px;
+	left: 160px;
 }
 
-#u3252-4:hover
+#u3252-6:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 19px;
-	width: 408px;
+	width: 622px;
 	margin: 30px -10000px 0px 0px;
 }
 
 #u4305
 {
-	z-index: 56;
+	z-index: 58;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
